include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.15.2.tar.gz
    URL_HASH SHA256=7b42b4d6ed48810c5362c265a17faebe90dc2373c885e5216439d37927f02926
)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

function(add_unit_test name)
    add_executable(${name} src/unit/${name}.cpp)
    target_link_libraries(${name} PRIVATE deltahdl_lib GTest::gtest_main)
    gtest_discover_tests(${name})
endfunction()

add_unit_test(test_adv_sim)
add_unit_test(test_adv_synth)
add_unit_test(test_aggregate)
add_unit_test(test_aig)
add_unit_test(test_aig_opt)
add_unit_test(test_api)
add_unit_test(test_assertion)
add_unit_test(test_cell_map)
add_unit_test(test_checker)
add_unit_test(test_class_sim)
add_unit_test(test_clocking)
add_unit_test(test_clocking_sim)
add_unit_test(test_compiled_sim)
add_unit_test(test_config)
add_unit_test(test_const_eval)
add_unit_test(test_constraint)
add_unit_test(test_coverage)
add_unit_test(test_dpi)
add_unit_test(test_dpi_runtime)
add_unit_test(test_driver_update)
add_unit_test(test_elab_annex_a_06_03)
add_unit_test(test_elab_annex_a_06_04)
add_unit_test(test_elab_annex_a_06_07_01)
add_unit_test(test_elab_annex_a_06_08)
add_unit_test(test_elab_annex_a_06_09)
add_unit_test(test_elab_annex_a_06_10)
add_unit_test(test_elab_annex_a_06_11)
add_unit_test(test_elab_annex_a_06_12)
add_unit_test(test_elab_annex_a_07_01)
add_unit_test(test_elab_annex_a_07_02)
add_unit_test(test_elab_annex_a_07_03)
add_unit_test(test_elab_annex_a_07_04)
add_unit_test(test_elab_annex_a_07_05)
add_unit_test(test_elab_clause_03_12_01)
add_unit_test(test_elab_clause_03_13)
add_unit_test(test_elaboration)
add_unit_test(test_enum_methods)
add_unit_test(test_eval)
add_unit_test(test_eval_advanced)
add_unit_test(test_eval_operators)
add_unit_test(test_eval_operators_xz)
add_unit_test(test_force_release)
add_unit_test(test_functions)
add_unit_test(test_gate_decl)
add_unit_test(test_gate_net_delays)
add_unit_test(test_ipc_sync)
add_unit_test(test_lexer)
add_unit_test(test_lexer_annex_b)
add_unit_test(test_lexer_extended)
add_unit_test(test_lexical)
add_unit_test(test_liberty)
add_unit_test(test_library_text)
add_unit_test(test_logic_4)
add_unit_test(test_logic_gates)
add_unit_test(test_lowerer)
add_unit_test(test_lut_map)
add_unit_test(test_mem_infer)
add_unit_test(test_mos_switches)
add_unit_test(test_mt_sim)
add_unit_test(test_net)
add_unit_test(test_net_decl)
add_unit_test(test_net_strengths)
add_unit_test(test_netlist_writer)
add_unit_test(test_parser)
add_unit_test(test_parser_annex_a_01)
add_unit_test(test_parser_annex_a_02)
add_unit_test(test_parser_annex_a_02_01_01)
add_unit_test(test_parser_annex_a_02_01_02)
add_unit_test(test_parser_annex_a_02_01_03)
add_unit_test(test_parser_annex_a_02_02_01)
add_unit_test(test_parser_annex_a_02_02_02)
add_unit_test(test_parser_annex_a_02_02_03)
add_unit_test(test_parser_annex_a_02_03)
add_unit_test(test_parser_annex_a_02_04)
add_unit_test(test_parser_annex_a_02_05)
add_unit_test(test_parser_annex_a_02_06)
add_unit_test(test_parser_annex_a_02_07)
add_unit_test(test_parser_annex_a_02_08)
add_unit_test(test_parser_annex_a_02_09)
add_unit_test(test_parser_annex_a_02_10a)
add_unit_test(test_parser_annex_a_02_10b)
add_unit_test(test_parser_annex_a_02_11a)
add_unit_test(test_parser_annex_a_02_11b)
add_unit_test(test_parser_annex_a_02_12)
add_unit_test(test_parser_annex_a_03)
add_unit_test(test_parser_annex_a_03_01a)
add_unit_test(test_parser_annex_a_03_01b)
add_unit_test(test_parser_annex_a_03_02)
add_unit_test(test_parser_annex_a_03_03)
add_unit_test(test_parser_annex_a_03_04)
add_unit_test(test_parser_annex_a_04)
add_unit_test(test_parser_annex_a_04_01_01)
add_unit_test(test_parser_annex_a_04_01_02)
add_unit_test(test_parser_annex_a_04_01_03)
add_unit_test(test_parser_annex_a_04_01_04)
add_unit_test(test_parser_annex_a_04_02)
add_unit_test(test_parser_annex_a_05)
add_unit_test(test_parser_annex_a_05_01)
add_unit_test(test_parser_annex_a_05_02)
add_unit_test(test_parser_annex_a_05_03a)
add_unit_test(test_parser_annex_a_05_03b)
add_unit_test(test_parser_annex_a_05_04)
add_unit_test(test_parser_annex_a_06_01)
add_unit_test(test_parser_annex_a_06_02a)
add_unit_test(test_parser_annex_a_06_02b)
add_unit_test(test_parser_annex_a_06_03)
add_unit_test(test_parser_annex_a_06_04)
add_unit_test(test_parser_annex_a_06_05)
add_unit_test(test_parser_annex_a_06_06)
add_unit_test(test_parser_annex_a_06_07)
add_unit_test(test_parser_annex_a_06_07_01)
add_unit_test(test_parser_annex_a_06_08)
add_unit_test(test_parser_annex_a_06_09)
add_unit_test(test_parser_annex_a_06_10)
add_unit_test(test_parser_annex_a_06_11)
add_unit_test(test_parser_annex_a_06_12)
add_unit_test(test_parser_annex_a_07)
add_unit_test(test_parser_annex_a_07_01)
add_unit_test(test_parser_annex_a_07_02)
add_unit_test(test_parser_annex_a_07_03)
add_unit_test(test_parser_annex_a_07_04)
add_unit_test(test_parser_annex_a_07_05)
add_unit_test(test_parser_annex_a_08)
add_unit_test(test_parser_annex_a_09)
add_unit_test(test_parser_annex_d)
add_unit_test(test_parser_annex_e_02)
add_unit_test(test_parser_annex_e_04)
add_unit_test(test_parser_annex_e_07)
add_unit_test(test_parser_annex_f)
add_unit_test(test_parser_annex_h)
add_unit_test(test_parser_clause_03_02)
add_unit_test(test_parser_clause_03_03)
add_unit_test(test_parser_clause_03_04)
add_unit_test(test_parser_clause_03_05)
add_unit_test(test_parser_clause_03_06)
add_unit_test(test_parser_clause_03_07)
add_unit_test(test_parser_clause_03_08)
add_unit_test(test_parser_clause_03_09)
add_unit_test(test_parser_clause_03_10)
add_unit_test(test_parser_clause_03_11)
add_unit_test(test_parser_clause_03_12)
add_unit_test(test_parser_clause_03_12_01)
add_unit_test(test_parser_clause_03_13)
add_unit_test(test_parser_clause_03_14)
add_unit_test(test_parser_clause_03_14_01)
add_unit_test(test_parser_clause_03_14_02)
add_unit_test(test_parser_clause_03_14_02_01)
add_unit_test(test_parser_clause_03_14_02_02)
add_unit_test(test_parser_clause_03_14_02_03)
add_unit_test(test_parser_clause_03_14_03)
add_unit_test(test_parser_clause_04_05)
add_unit_test(test_parser_clause_04_06)
add_unit_test(test_parser_clause_04_09_03)
add_unit_test(test_parser_clause_04_09_04)
add_unit_test(test_parser_clause_05)
add_unit_test(test_parser_clause_05_01)
add_unit_test(test_parser_clause_05_03)
add_unit_test(test_parser_clause_05_05)
add_unit_test(test_parser_clause_05_06)
add_unit_test(test_parser_clause_05_06_01)
add_unit_test(test_parser_clause_05_06_02)
add_unit_test(test_parser_clause_05_06_03)
add_unit_test(test_parser_clause_05_07_01)
add_unit_test(test_parser_clause_05_07_02)
add_unit_test(test_parser_clause_05_08)
add_unit_test(test_parser_clause_05_09)
add_unit_test(test_parser_clause_05_09_01)
add_unit_test(test_parser_clause_05_10)
add_unit_test(test_parser_clause_05_11)
add_unit_test(test_parser_clause_05_12)
add_unit_test(test_parser_clause_05_13)
add_unit_test(test_parser_clause_06_11)
add_unit_test(test_parser_clause_06_12)
add_unit_test(test_parser_clause_06_16)
add_unit_test(test_parser_clause_06a)
add_unit_test(test_parser_clause_06b)
add_unit_test(test_parser_clause_06c)
add_unit_test(test_parser_clause_06d)
add_unit_test(test_parser_clause_06j)
add_unit_test(test_parser_clause_07a)
add_unit_test(test_parser_clause_07b)
add_unit_test(test_parser_clause_07c)
add_unit_test(test_parser_clause_08a)
add_unit_test(test_parser_clause_08b)
add_unit_test(test_parser_clause_09_03_01)
add_unit_test(test_parser_clause_09a)
add_unit_test(test_parser_clause_09b)
add_unit_test(test_parser_clause_09c)
add_unit_test(test_parser_clause_10a)
add_unit_test(test_parser_clause_10b)
add_unit_test(test_parser_clause_11a)
add_unit_test(test_parser_clause_11b)
add_unit_test(test_parser_clause_11c)
add_unit_test(test_parser_clause_11d)
add_unit_test(test_parser_clause_12a)
add_unit_test(test_parser_clause_12b)
add_unit_test(test_parser_clause_13a)
add_unit_test(test_parser_clause_14)
add_unit_test(test_parser_clause_15)
add_unit_test(test_parser_clause_16a)
add_unit_test(test_parser_clause_16b)
add_unit_test(test_parser_clause_17)
add_unit_test(test_parser_clause_18a)
add_unit_test(test_parser_clause_18b)
add_unit_test(test_parser_clause_19)
add_unit_test(test_parser_clause_20a)
add_unit_test(test_parser_clause_20b)
add_unit_test(test_parser_clause_21)
add_unit_test(test_parser_clause_22_01)
add_unit_test(test_parser_clause_22_08)
add_unit_test(test_parser_clause_22_13)
add_unit_test(test_parser_clause_22_14)
add_unit_test(test_parser_clause_23_02)
add_unit_test(test_parser_clause_23a)
add_unit_test(test_parser_clause_23b)
add_unit_test(test_parser_clause_24)
add_unit_test(test_parser_clause_25)
add_unit_test(test_parser_clause_26)
add_unit_test(test_parser_clause_27)
add_unit_test(test_parser_clause_28_03)
add_unit_test(test_parser_clause_28_03_02)
add_unit_test(test_parser_clause_28_03_03)
add_unit_test(test_parser_clause_28_03_05)
add_unit_test(test_parser_clause_28_04)
add_unit_test(test_parser_clause_28_05)
add_unit_test(test_parser_clause_28_06)
add_unit_test(test_parser_clause_28_07)
add_unit_test(test_parser_clause_28_08)
add_unit_test(test_parser_clause_28_09)
add_unit_test(test_parser_clause_28_10)
add_unit_test(test_parser_clause_28_16)
add_unit_test(test_parser_clause_29_03)
add_unit_test(test_parser_clause_29_03_06)
add_unit_test(test_parser_clause_29_04)
add_unit_test(test_parser_clause_29_05)
add_unit_test(test_parser_clause_29_07)
add_unit_test(test_parser_clause_29_09)
add_unit_test(test_parser_clause_30_02)
add_unit_test(test_parser_clause_30_03)
add_unit_test(test_parser_clause_30_04)
add_unit_test(test_parser_clause_30_05)
add_unit_test(test_parser_clause_30_07)
add_unit_test(test_parser_clause_31_03)
add_unit_test(test_parser_clause_31_04)
add_unit_test(test_parser_clause_31_06)
add_unit_test(test_parser_clause_33)
add_unit_test(test_parser_clause_34)
add_unit_test(test_parser_clause_35a)
add_unit_test(test_parser_clause_36a)
add_unit_test(test_parser_clause_38)
add_unit_test(test_parser_clause_39)
add_unit_test(test_parser_clause_40)
add_unit_test(test_parser_let)
add_unit_test(test_preprocessor)
add_unit_test(test_process)
add_unit_test(test_program)
add_unit_test(test_protected)
add_unit_test(test_pull_gates)
add_unit_test(test_queue_ref)
add_unit_test(test_real_types)
add_unit_test(test_scheduler)
add_unit_test(test_sdf)
add_unit_test(test_sim_annex_a_06_03)
add_unit_test(test_sim_annex_a_06_04)
add_unit_test(test_sim_annex_a_06_05)
add_unit_test(test_sim_annex_a_06_06)
add_unit_test(test_sim_annex_a_06_07)
add_unit_test(test_sim_annex_a_06_07_01)
add_unit_test(test_sim_annex_a_06_08)
add_unit_test(test_sim_annex_a_06_09)
add_unit_test(test_sim_annex_a_06_10)
add_unit_test(test_sim_annex_a_06_11)
add_unit_test(test_sim_annex_a_06_12)
add_unit_test(test_sim_annex_a_07_01)
add_unit_test(test_sim_annex_a_07_02)
add_unit_test(test_sim_annex_a_07_03)
add_unit_test(test_sim_annex_a_07_04)
add_unit_test(test_sim_annex_a_07_05)
add_unit_test(test_sim_clause_04_02)
add_unit_test(test_sim_clause_04_03)
add_unit_test(test_sim_clause_04_04)
add_unit_test(test_sim_clause_04_04_01)
add_unit_test(test_sim_clause_04_04_02)
add_unit_test(test_sim_clause_04_04_02_01)
add_unit_test(test_sim_clause_04_04_02_02)
add_unit_test(test_sim_clause_04_04_02_03)
add_unit_test(test_sim_clause_04_04_02_04)
add_unit_test(test_sim_clause_04_04_02_05)
add_unit_test(test_sim_clause_04_04_02_06)
add_unit_test(test_sim_clause_04_04_02_07)
add_unit_test(test_sim_clause_04_04_02_08)
add_unit_test(test_sim_clause_04_04_02_09)
add_unit_test(test_sim_clause_04_04_03)
add_unit_test(test_sim_clause_04_04_03_01)
add_unit_test(test_sim_clause_04_04_03_02)
add_unit_test(test_sim_clause_04_04_03_03)
add_unit_test(test_sim_clause_04_04_03_04)
add_unit_test(test_sim_clause_04_04_03_05)
add_unit_test(test_sim_clause_04_04_03_06)
add_unit_test(test_sim_clause_04_04_03_07)
add_unit_test(test_sim_clause_04_04_03_08)
add_unit_test(test_sim_clause_04_04_03_09)
add_unit_test(test_sim_clause_04_04_03_10)
add_unit_test(test_sim_clause_04_05)
add_unit_test(test_sim_clause_04_06)
add_unit_test(test_sim_clause_04_07)
add_unit_test(test_sim_clause_04_08)
add_unit_test(test_sim_clause_04_09)
add_unit_test(test_sim_clause_04_09_01)
add_unit_test(test_sim_clause_04_09_02)
add_unit_test(test_sim_clause_04_09_03)
add_unit_test(test_sim_clause_04_09_04)
add_unit_test(test_sim_clause_04_09_05)
add_unit_test(test_sim_clause_04_09_06)
add_unit_test(test_sim_clause_04_09_07)
add_unit_test(test_sim_clause_04_10)
add_unit_test(test_sim_clause_05_02)
add_unit_test(test_sim_clause_05_03)
add_unit_test(test_sim_clause_05_04)
add_unit_test(test_sim_clause_05_05)
add_unit_test(test_sim_clause_05_06)
add_unit_test(test_sim_clause_05_06_01)
add_unit_test(test_sim_clause_05_06_02)
add_unit_test(test_sim_clause_05_06_03)
add_unit_test(test_sim_clause_05_06_04)
add_unit_test(test_sim_clause_05_07)
add_unit_test(test_sim_clause_05_07_01)
add_unit_test(test_sim_clause_05_07_02)
add_unit_test(test_sim_clause_05_08)
add_unit_test(test_sim_clause_05_09)
add_unit_test(test_sim_clause_05_09_01)
add_unit_test(test_sim_clause_05_10)
add_unit_test(test_sim_clause_05_11)
add_unit_test(test_sim_clause_05_12)
add_unit_test(test_sim_clause_05_13)
add_unit_test(test_sim_clause_06)
add_unit_test(test_sim_clause_13)
add_unit_test(test_source_text)
add_unit_test(test_source_text_b)
add_unit_test(test_source_text_c)
add_unit_test(test_specify)
add_unit_test(test_stmt_exec)
add_unit_test(test_stmt_exec_lhs)
add_unit_test(test_strength_model)
add_unit_test(test_string_methods)
add_unit_test(test_sv_callable)
add_unit_test(test_sv_vpi_user)
add_unit_test(test_sva_engine)
add_unit_test(test_svdpi)
add_unit_test(test_switch_processing)
add_unit_test(test_synth_lower)
add_unit_test(test_systask)
add_unit_test(test_systask_math)
add_unit_test(test_timing_control)
add_unit_test(test_tristate_gates)
add_unit_test(test_udp_sim)
add_unit_test(test_user_defined_nettype)
add_unit_test(test_vcd)
add_unit_test(test_vpi)
add_unit_test(test_vpi_compat)
add_unit_test(test_vpi_complete)
